# lattice_modules

./: .gitignore  .gitmodules  CMakeLists.txt  azure-pipelines.yml  commit.py  pianoStereo.wav.reapeaks  readme.md  validateModules.sh
bl_synth/: BlSynthProcessor.h  CMakeLists.txt
chorus/: ChorusProcessor.cpp  ChorusProcessor.h
delay/: CMakeLists.txt  DelayProcessor.cpp  DelayProcessor.h
docs/: config  index.html  style.css
docs/html/: _8___lattice_processor_module_8h_source.html  _lattice_processor_module_8h_source.html  annotated.html  class_lattice_processor_module-members.html  class_lattice_processor_module.html  classes.html  classsvg_1_1_circle-members.html  classsvg_1_1_circle.html  classsvg_1_1_color-members.html  classsvg_1_1_color.html  classsvg_1_1_document-members.html  classsvg_1_1_document.html  classsvg_1_1_elipse-members.html  classsvg_1_1_elipse.html  classsvg_1_1_fill-members.html  classsvg_1_1_fill.html  classsvg_1_1_font-members.html  classsvg_1_1_font.html  classsvg_1_1_line-members.html  classsvg_1_1_line.html  classsvg_1_1_line_chart-members.html  classsvg_1_1_line_chart.html  classsvg_1_1_path-members.html  classsvg_1_1_path.html  classsvg_1_1_polygon-members.html  classsvg_1_1_polygon.html  classsvg_1_1_polyline-members.html  classsvg_1_1_polyline.html  classsvg_1_1_rectangle-members.html  classsvg_1_1_rectangle.html  classsvg_1_1_rounded_rectangle-members.html  classsvg_1_1_rounded_rectangle.html  classsvg_1_1_serializeable-members.html  classsvg_1_1_serializeable.html  classsvg_1_1_shape-members.html  classsvg_1_1_shape.html  classsvg_1_1_stroke-members.html  classsvg_1_1_stroke.html  classsvg_1_1_text-members.html  classsvg_1_1_text.html  (+29 more)
docs/latex/: _8___lattice_processor_module_8h_source.tex  _lattice_processor_module_8h_source.tex  annotated.tex  class_lattice_processor_module.tex  classsvg_1_1_circle.eps  classsvg_1_1_circle.tex  classsvg_1_1_color.eps  classsvg_1_1_color.tex  classsvg_1_1_document.tex  classsvg_1_1_elipse.eps  classsvg_1_1_elipse.tex  classsvg_1_1_fill.eps  classsvg_1_1_fill.tex  classsvg_1_1_font.eps  classsvg_1_1_font.tex  classsvg_1_1_line.eps  classsvg_1_1_line.tex  classsvg_1_1_line_chart.eps  classsvg_1_1_line_chart.tex  classsvg_1_1_path.eps  classsvg_1_1_path.tex  classsvg_1_1_polygon.eps  classsvg_1_1_polygon.tex  classsvg_1_1_polyline.eps  classsvg_1_1_polyline.tex  classsvg_1_1_rectangle.eps  classsvg_1_1_rectangle.tex  classsvg_1_1_rounded_rectangle.eps  classsvg_1_1_rounded_rectangle.tex  classsvg_1_1_serializeable.eps  classsvg_1_1_serializeable.tex  classsvg_1_1_shape.eps  classsvg_1_1_shape.tex  classsvg_1_1_stroke.eps  classsvg_1_1_stroke.tex  classsvg_1_1_text.eps  classsvg_1_1_text.tex  classsvg_1_1optional.tex  files.tex  hierarchy.tex  (+12 more)
drive_synth/: DriveSynthProcessor.h
examples/adsr/: ADSRProcessor.cpp  ADSRProcessor.h
examples/atune/: ATuneProcessor.cpp  ATuneProcessor.h  CMakeLists.txt
examples/bit_crunch/: BitCrunchProcessor.h
examples/bl_synth/: BlSynthProcessor.cpp  BlSynthProcessor.h  CMakeLists.txt
examples/bubbles_waveform/: CMakeLists.txt
examples/chorus/: CMakeLists.txt  ChorusProcessor.cpp  ChorusProcessor.h
examples/convolution_reverb/: CMakeLists.txt  ConvolutionReverbProcessor.cpp  ConvolutionReverbProcessor.h
examples/delay/: CMakeLists.txt  DelayProcessor.cpp  DelayProcessor.h
examples/drive_synth/: CMakeLists.txt  DriveSynthProcessor.cpp  DriveSynthProcessor.h
examples/file_player/: FilePlayerProcessor.cpp  FilePlayerProcessor.h
examples/flanger/: FlangerProcessor.cpp  FlangerProcessor.h
examples/four_pole_lp/: CMakeLists.txt  FourPoleProcessor.cpp  FourPoleProcessor.h
examples/freeze/: CMakeLists.txt  FreezeProcessor.cpp  FreezeProcessor.h
examples/freqshift/: FShiftProcessor.cpp  FShiftProcessor.h
examples/freverb/: CMakeLists.txt  FreverbProcessor.cpp  FreverbProcessor.h
examples/gain/: CMakeLists.txt  GainProcessor.cpp  GainProcessor.h
examples/gr_synth/: CMakeLists.txt  GrSynthProcessor.cpp  GrSynthProcessor.h
examples/ks_synth/: CMakeLists.txt  KSSynthProcessor.cpp  KSSynthProcessor.h
examples/leslie/: VibratoProcessor.cpp  VibratoProcessor.h
examples/lfo/: CMakeLists.txt  LFOProcessor.cpp  LFOProcessor.h
examples/midi_filter/: CMakeLists.txt
examples/midi_maker/: CMakeLists.txt  MidiMakerProcessor.cpp  MidiMakerProcessor.h
examples/midicv/: MIDICVProcessor.cpp  MIDICVProcessor.h
examples/morph/: CMakeLists.txt  MorphProcessor.cpp  MorphProcessor.h
examples/one_pole_lp/: CMakeLists.txt  OnePoleProcessor.cpp  OnePoleProcessor.h
examples/param_eq/: EqProcessor.cpp  EqProcessor.h
examples/pshift/: PShiftProcessor.cpp  PShiftProcessor.h
examples/random/: CMakeLists.txt  RandomProcessor.cpp  RandomProcessor.h
examples/random_toggles/: RandomToggleProcessor.h
examples/sampler/: CMakeLists.txt  SamplerProcessor.cpp  SamplerProcessor.h
examples/sfil/: SFilProcessor.cpp  SFilProcessor.h
examples/simple_synth/: CMakeLists.txt  SimpleSynthProcessor.cpp  SimpleSynthProcessor.h
examples/specsampler/: CMakeLists.txt  SpecSampProcessor.cpp  SpecSampProcessor.h
examples/specsampler1/: SpecSampProcessor.cpp  (+1 more)
examples/waveform_viewer/: CMakeLists.txt  WaveformViewerProcessor.cpp  WaveformViewerProcessor.h
flanger/: CMakeLists.txt  FlangerProcessor.h
four_pole_lp/: CMakeLists.txt  FourPoleProcessor.cpp  FourPoleProcessor.h
gain/: CMakeLists.txt  GainProcessor.cpp  GainProcessor.h
include/: Array.hpp  LatticeProcessorModule.h  simple_svg_1.0.0.hpp
ks_synth/: CMakeLists.txt  KSProcessor.cpp  KSProcessor.h  KSSynthProcessor.h
lattice_synth/: CMakeLists.txt  LatticeSynthProcessor.cpp  LatticeSynthProcessor.h
one_pole_lp/: CMakeLists.txt
param_eq/: CMakeLists.txt
simple_synth/: SimpleSynthProcessor.cpp  SimpleSynthProcessor.h
src/: LatticeExternalProcessor.cpp  LatticeExternalProcessor.h  LatticeExternalTestApp.cpp  LatticeNodeProcessor.h  LatticeProcessorModule.h  simple_svg_1.0.0.hpp
two_pole_svf/: CMakeLists.txt  TwoPoleProcessor.h
waveform_viewer/: WaveformViewerProcessor.cpp  WaveformViewerProcessor.h
(+228 files in other folders)
