cmake_minimum_required(VERSION 3.15)
project (LatticeModules)

if(NOT DEFINED BUILD_VERSION)
	set(BUILD_VERSION 0.1.169)
endif()


if(MSVC)
    set(PLATFORM "Windows")
else()
    set(PLATFORM "MacOS")
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_compile_options ( -fdeclspec -fms-extensions)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

include_directories("${CMAKE_SOURCE_DIR}/include/")
include_directories("${CMAKE_SOURCE_DIR}/aurora/include")
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/vibr)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/leslie)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/tonewheel)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/subsynth)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/adsr)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/atune)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/bit_crunch)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/bl_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/chorus)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/convolution_reverb)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/delay)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/drive_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/file_player)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/flanger)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/four_pole_lp)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/freeze)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/freqshift)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/freverb)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gain)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gr_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/ks_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/lfo)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/midi_maker)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/midi_filter)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/midicv)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/morph)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/one_pole_lp)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/param_eq)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/pshift)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/random)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/random_toggles)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/sampler)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/sfil)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/simple_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/specsampler)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/specsampler1)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/specsampler2)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/svoc)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/table_viewer)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/test_tone)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/tscale)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/tvconv)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/two_pole_svf)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/voc_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/examples/waveform_viewer)

