cmake_minimum_required(VERSION 3.15)
project (LatticeModules)

if(NOT DEFINED BUILD_VERSION)
	set(BUILD_VERSION 0.1.202)
endif()


if(MSVC)
    set(PLATFORM "Windows")
else()
    set(PLATFORM "MacOS")
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_compile_options ( -fdeclspec -fms-extensions)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

include_directories("${CMAKE_SOURCE_DIR}/include/")
include_directories("${CMAKE_SOURCE_DIR}/aurora/include")
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/tonegen)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/sqtonegen)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/slew)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/tapdelay)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/noisegen)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/vibr)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/leslie)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/tonewheel)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/subsynth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/adsr)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/atune)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/bit_crunch)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/bl_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/chorus)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/convolution_reverb)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/delay)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/drive_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/file_player)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/flanger)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/four_pole_lp)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/freeze)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/freqshift)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/freverb)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/gain)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/gr_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/ks_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/lfo)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/midi_maker)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/midi_filter)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/midicv)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/morph)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/one_pole_lp)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/param_eq)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/pshift)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/random)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/random_toggles)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/sampler)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/sfil)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/simple_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/specsampler)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/specsampler1)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/specsampler2)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/svoc)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/test_tone)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/tscale)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/tvconv)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/two_pole_svf)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/voc_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/waveform_viewer)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/midi_arp)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/midi_delay)
# add_subdirectory(${CMAKE_SOURCE_DIR}/modules/midi_seq)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/midi_chord)
