cmake_minimum_required(VERSION 3.15)
project (LatticeModules)

if(NOT DEFINED BUILD_VERSION)
	set(BUILD_VERSION 0.1.222)
endif()


if(MSVC)
    set(PLATFORM "Windows")
else()
    set(PLATFORM "MacOS")
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_compile_options ( -fdeclspec -fms-extensions)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

include_directories("${CMAKE_SOURCE_DIR}/include/")
include_directories("${CMAKE_SOURCE_DIR}/aurora/include")
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/chorus)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/delay)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/flanger)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/freverb)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/gain)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/one_pole_lp)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/simple_synth)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/test_tone)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/two_pole_svf)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/mixer4)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/mixer8)
add_subdirectory(${CMAKE_SOURCE_DIR}/modules/mixer16)
